[package]
name = "hsm"
version = "0.1.0"
authors = ["wizkr <wizkr@example.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
bitcoin = { version = "0.27", default-features = false, features = ["no-std", "use-serde", "secp-lowmemory"] }
microlisp = { path = "../microlisp", default-features = false, features = [ ] }
blake3 = { version = "1.3", default-features = false, features = [ ]}
serde = { version = "1.0", default-features = false, features = [ ]}
bincode = { version = "1.3", default-features = false, features = [ ]}
