[package]
name = "hsm"
version = "0.1.0"
authors = ["wizkr <wizkr@example.com>"]
license = "GPL-3.0"
edition = "2018"

[dependencies]
bitcoin = { version = "0.28", default-features = false, features = ["no-std", "use-serde", "secp-lowmemory"] }
secp256k1 = { version = "0.22.0", default-features = false, features = ["lowmemory", "serde", "alloc", "global-context"] }
microlisp = { path = "../microlisp", default-features = false, features = [ ] }
blake3 = { version = "1.3", default-features = false, features = [ ]}
serde = { version = "1.0", default-features = false, features = [ ]}
bincode = { version = "1.3", default-features = false, features = [ ]}
